Stop text overflow for book title and author

--- a/style.css
+++ b/style.css
@@ -846,7 +846,7 @@ footer {
     
 
     .book-container {
-        padding: 0px 0px 0px 10px;
+        padding: 0px 0px 0px 0px;
         display: grid;
         grid-template-columns: 4fr 4fr 2fr 2fr 2fr 1.5fr 1.5fr;
         /* background-color: var(--secondary-background-color); */
@@ -921,13 +921,13 @@ footer {
     }
 
 
-    .book-container > *:nth-child(1),
+    /* .book-container > *:nth-child(1),
     .book-container > *:nth-child(2) {
         display: flex;
         justify-content: left;
         align-items: center;
         padding-left: 10px;
-    }
+    } */
 
     .delete-book-button {
         color: transparent; 
@@ -950,6 +950,19 @@ footer {
         -ms-transition: background-color 0ms linear;
         transition: background-color 0ms linear; 
     }
+
+    .book-overflow-text {
+        display: block;
+        width: 100%;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        padding-left: 10px;
+    }
+
+    /* .book-container > *:nth-child(2) {
+        padding-left: 10px;
+    } */
 
 
 
